# columba

./: .dir-locals.el.in  AUTHORS  COPYING  Makefile.am  README.md  autogen.sh  build-deps.catalog  configure.ac  uncrustify.cfg
columba/: Doxyfile.in  Makefile.am  columba-atomic-internal.h  columba-compiler.h  columba-internal.h  columba-object.c  columba-object.h  columba-version.c  columba-version.h.in  columba.h
hooks/: pre-commit
hooks/pre-commit.d/: 00-uncrustify.sh  10-scan-build.sh  99-make-distcheck.sh
m4/: columba_check_warning_flags.m4  gcov.m4
tests/: Makefile.am  reference-counting.c  version.c
